# ECOPE

./: LICENCE  README.md
ecope-backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_model_loading.py
ecope-backend/app/: .env.example
ecope-backend/app/api/dependencies/: auth.py
ecope-backend/app/api/routes/: __init__.py  auth.py  chatbot.py  complaints.py  eda.py  users.py
ecope-backend/app/chatbot/: agent.py  embeddings.py  tools.py  visualizations.py
ecope-backend/app/core/: config.py  security.py
ecope-backend/app/db/: database.py
ecope-backend/app/ml/: model.py
ecope-backend/app/models/domain/: complaint.py  user.py
ecope-backend/app/models/schemas/: complaint.py  user.py
ecope-backend/app/services/: __init__.py  complaint_service.py  eda_service.py  ocr_service.py
ecope-backend/data/: complaints-small.csv  complaints.csv
ecope-backend/notebooks/: EDA_SCOPE.ipynb  Model_SCOPE.ipynb
ecope-backend/scripts/: migrate_users.py  seed_data.py  seed_it_support.py
ecope-frontend/: .env.local.example  API-IMPLEMENTATION-SUMMARY.md  API-ROUTE-DOCS.md  CACHING-DOCS.md  README.md  middleware.ts  package-lock.json  package.json
ecope-frontend/app/: layout.tsx  page.tsx
ecope-frontend/app/(dashboard)/: layout.tsx
ecope-frontend/app/login/: page.tsx
ecope-frontend/components/complaints/: ComplaintDialog.tsx  EditComplaintDialog.tsx  NewComplaintDialog.tsx
ecope-frontend/hooks/: use-complaints.ts
ecope-frontend/lib/: OCR.ts  api-utils.ts  api.ts  cache-utils.ts  toast.ts
ecope-frontend/types/: index.ts
(+35 files in other folders)
